2-environments/3-production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gce-ingress-maliev
  namespace: maliev-prod
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.global-static-ip-name: maliev-ip
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/issue-temporary-certificate: "true"
spec:
  tls:
    - hosts:
        - "*.maliev.com"
        - maliev.com
      secretName: maliev-com-wildcard-tls
  rules:
    - host: api.maliev.com
      http:
        paths:
          - path: /auth
        pathType: Prefix
        backend:
          service:
            name: maliev-auth-service
            port:
              number: 8080
